Uploaded image for project: 'Qpid'
  1. Qpid
  2. QPID-4506

Qpid HA's '--ha-public-url' option duplicates the '--known-hosts-url' option but cannot be disabled

    XMLWordPrintableJSON

Details

    • Bug
    • Status: Closed
    • Major
    • Resolution: Fixed
    • None
    • None
    • C++ Clustering
    • None

    Description

      This commit simplifies the semantics of setting
      --ha-public-url and --ha-brokers-url. There is no longer any over-riding or
      implicit updating of values. That means you must set --ha-public-url as well as
      --ha-brokers-url, it will not be defaulted. Likewise if you dont set
      ha-public-url, it will remain empty, which is the use case in this bug.

      The defaulting was adding complexity without adding much value.

      Attachments

        Activity

          People

            Unassigned Unassigned
            aconway Alan Conway
            Votes:
            0 Vote for this issue
            Watchers:
            1 Start watching this issue

            Dates

              Created:
              Updated:
              Resolved: