QPID-4506: Qpid HA's '--ha-public-url' option duplicates the '--known-hosts-url' option but cannot be disabled

Reverts the previous commit and simplifies the semantics of setting
--ha-public-url and --ha-brokers-url.  There is no longer any over-riding or
implicit updating of values. That means you must set --ha-public-url as well as
--ha-brokers-url, it will not be defaulted.  Likewise if you *dont* set
ha-public-url, it will remain empty, which is the use case in this bug.

The defaulting was adding complexity without adding much value.

git-svn-id: https://svn.apache.org/repos/asf/qpid/trunk/qpid@1421934 13f79535-47bb-0310-9956-ffa450edef68